--- a/Final_Project/production/README
+++ b/Final_Project/production/README
@@ -4,4 +4,5 @@ https://ambermd.org/tutorials/basic/tutorial14/index.php
 
 Although at that point I somewhat understood Amber inputs already. I plan to switch to nvt and enable respa to accelerate MD. I ahd to decrease the time step as the first 100 ns simulation at 400K
 
-Seemed like it just blew up. Later I found out it was just above the MD melting temp
+Seemed like it just blew up. Later I found out it was just above the MD melting temp. I am not sure how good was the idea with restraining part of the protein, I wanted to ask you on Friday,
+but I was afraid I will screw up the other thing you were doing
